--- a/scripts/configs/pipeline_mobilenet_v1_ssd_retrain_last_few_layers.config
+++ b/scripts/configs/pipeline_mobilenet_v1_ssd_retrain_last_few_layers.config
@@ -187,7 +187,7 @@ train_config {
 train_input_reader {
   label_map_path: "DATASET_DIR_TO_CONFIGURE/kitchen_dataset_label_map.pbtxt"
   tf_record_input_reader {
-    input_path: "DATASET_DIR_TO_CONFIGURE/kitchen_dataset_train.record-?????-of-00010"
+    input_path: "DATASET_DIR_TO_CONFIGURE/kitchen_dataset_train.record"
   }
 }
 eval_config {
@@ -200,7 +200,7 @@ eval_input_reader {
   shuffle: false
   num_readers: 1
   tf_record_input_reader {
-    input_path: "DATASET_DIR_TO_CONFIGURE/kitchen_dataset_test.record-?????-of-00010"
+    input_path: "DATASET_DIR_TO_CONFIGURE/kitchen_dataset_test.record"
   }
 }
 graph_rewriter {
