--- a/scripts/configs/pipeline_mobilenet_v2_ssd_retrain_whole_model.config
+++ b/scripts/configs/pipeline_mobilenet_v2_ssd_retrain_whole_model.config
@@ -1,4 +1,4 @@
-# Quantized trained SSD with Mobilenet v2 on Pets Dataset.
+ 8# Quantized trained SSD with Mobilenet v2 on Pets Dataset.
 
 model {
   ssd {
@@ -133,7 +133,7 @@ model {
   }
 }
 train_config {
-  batch_size: 32 
+  batch_size: 8 
   data_augmentation_options {
     random_horizontal_flip {
     }
