--- a/scripts/configs/pipeline_mobilenet_v2_ssd_retrain_whole_model.config
+++ b/scripts/configs/pipeline_mobilenet_v2_ssd_retrain_whole_model.config
@@ -1,4 +1,4 @@
- 8# Quantized trained SSD with Mobilenet v2 on Pets Dataset.
+# Quantized trained SSD with Mobilenet v2 on Pets Dataset.
 
 model {
   ssd {
