--- a/scripts/configs/pipeline_mobilenet_v2_ssd_retrain_whole_model.config
+++ b/scripts/configs/pipeline_mobilenet_v2_ssd_retrain_whole_model.config
@@ -1,8 +1,6 @@
-# Quantized trained SSD with Mobilenet v2 on Pets Dataset.
-
 model {
   ssd {
-    num_classes: 2
+    num_classes: NUM_CLASSES_TO_CONFIGURE 
     image_resizer {
       fixed_shape_resizer {
         height: 300
